--- a/src/routes/WatcherView.css
+++ b/src/routes/WatcherView.css
@@ -19,7 +19,7 @@
 
 .herogrids .leftgrid {
     border-radius: 25px;
-    background: #231a41;;
+    background: #231a41;
     border: 1px solid #815BFF;
     color: #a579cc;
     padding: 2rem;
