--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -36,7 +36,31 @@
     color: #F0B5F0;
 }
 
+.input {
+    background: #18122d;
+    color: #fff;
+    border: 1px solid #cdbdff;
+    padding: 0.8rem 2.5rem 0.8rem 1rem;
+    border-radius: 50px;
+    margin-left: -7rem;
+    outline: none;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13.9602px;
+    line-height: 150%;
+  
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+  }
+  .input::placeholder {
+    color: #cdbdff;
+    opacity: 1;
+  }
+
 @media screen and (max-width:940px) {
+
     .hamburger {
         display: block;
     }
