--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -16,63 +16,25 @@
 
 }
 
-
-
-.title {
-    width: 100%;
-    height: auto;
-    font-size: 120px;
+.hero .hero-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
+    padding: 3rem;
     text-align: center;
-    font-weight: 900;
-    padding-bottom: 100px;
-    padding-top: 100px;
-} 
-
-.subtitle {
-    width: 100%;
-    height: auto;
-    font-size: 50px;
-    text-align: center;
-    font-weight: 600;
-} 
-
-.connect {
-    width: 100%;
-    height: auto;
-    font-size: 30px;
-    text-align: center;
-    font-weight: 400;
-    padding-top: 90px;
-    padding-bottom: 50px;
 }
 
-.button {
-    padding: 10px 28px;
-    font-size: 1.2rem;
-    background-image: linear-gradient(45deg, var(--primary-midnight) 0%, var(--primary-pink) 100%);
-    color: #fff;
-    border: none;
-    border-radius: 50px;
-    font-family: 'Syne', sans-serif; 
-    display:fixed;
+.hero p {
+    font-size: 1.4rem;
 }
 
-@media screen and (max-width: 940px) {
-    .videoplayer {
-        width: 60vh;
-        padding-top: 3em;
-        padding-left: 3em;
-        height: 50%;
-        background-color: transparent;
-    }
+.hero .btn {
+    margin: 1rem;
+}
 
-  }
-  @media screen and (max-width: 495px) {
-    .videoplayer {
-        width: 60vh;
-        padding-top: 3em;
-        padding-left: 2em;
-        height: 50%;
-        background-color: transparent;
-    }
-  }
+.bottom-text h2 {
+    font-size: 1.6rem;
+    text-align: center;
+}
